--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <!-- 상단 배경 색상 -->
     <View
         android:id="@+id/rectangle11"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_alignParentTop="true"
-        android:background="#D78324"
+        android:background="#D78324" />
 
-        />
     <!-- 절약 제목 -->
     <TextView
         android:id="@+id/saving_title"
@@ -20,13 +19,15 @@
         android:text="나의 첫 번째 절약"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true" />
+
     <!-- 절약 목표 -->
     <EditText
+        android:id="@+id/saving_purpose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="≪ 절약 목표 ≫"
-        android:textSize="30sp"
+        android:textSize="23sp"
         android:textColor="#000000"
         android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true" />
@@ -40,7 +41,7 @@
         android:textSize="16sp"
         android:layout_below="@id/saving_title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="40dp" />
 
     <!-- 목표 금액 -->
     <TextView
@@ -51,11 +52,9 @@
         android:textSize="16sp"
         android:layout_below="@id/d_day_text"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp" />
 
     <!-- 목표 금액 입력 -->
-
-    <!-- 목표 날짜 입력 -->
     <EditText
         android:id="@+id/input_goal_amount"
         android:layout_width="match_parent"
@@ -74,7 +73,7 @@
         android:layout_below="@id/input_goal_amount"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:layout_marginEnd="20dp" />
 
     <!-- 업데이트 버튼 -->
     <Button
@@ -85,7 +84,7 @@
         android:layout_below="@id/input_goal_date"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:layout_marginEnd="20dp" />
 
     <!-- 카테고리 버튼들을 가로로 정렬 -->
     <LinearLayout
@@ -104,7 +103,7 @@
             android:layout_height="wrap_content"
             android:text="식비"
             android:layout_weight="1"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp" />
 
         <Button
             android:id="@+id/living_button"
@@ -112,23 +111,27 @@
             android:layout_height="wrap_content"
             android:text="생활비"
             android:layout_weight="1"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp" />
 
         <Button
             android:id="@+id/etc_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="기타"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
     </LinearLayout>
 
     <!-- 소비 내역을 ScrollView로 묶음 -->
+
+    <!-- 내비게이션 바 이미지들 -->
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/linear_layout"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="66dp"
+        android:layout_marginBottom="-46dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -141,28 +144,61 @@
                 android:id="@+id/expense_details_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="소비 내역"
-                android:textSize="14sp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp"
+                android:text="소비 내역"
+                android:textSize="14sp" />
 
             <!-- 오늘 소비 금액 -->
             <TextView
                 android:id="@+id/today_expense_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="오늘 소비 금액"
-                android:textSize="16sp"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"/>
-            <Button
-                android:id="@+id/settings_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="⚙️"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="20dp"/>
+                android:layout_marginTop="10dp"
+                android:text="오늘 소비 금액"
+                android:textSize="16sp" />
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="39dp"
+            android:src="@drawable/img" />
+
+        <ImageView
+            android:id="@+id/reset_image"
+            android:layout_width="48dp"
+            android:layout_height="39dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/img_1"
+            android:contentDescription="Reset Button" />
+
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="39dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/img_2"
+            />
+    </LinearLayout>
+
+    <!-- 설정 버튼 -->
+    <Button
+        android:id="@+id/settings_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="20dp"
+        android:text="⚙️" />
 
 </RelativeLayout>
