--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_brown">#FFD78324</color>
+    <color name="light_brown">#1AD78324</color>
+    <color name="divider_brown">#FFABA298</color>
 </resources>
