--- a/app/src/main/res/layout/activity_saving_list.xml
+++ b/app/src/main/res/layout/activity_saving_list.xml
@@ -40,7 +40,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_savings"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/total_savings_count" />
@@ -49,7 +50,40 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/bagger"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent" />
 
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#D78324"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:id="@+id/log_image"
+            android:layout_width="48dp"
+            android:layout_height="39dp"
+            android:layout_marginEnd="60dp"
+            android:src="@drawable/log" />
+
+        <ImageView
+            android:id="@+id/now_image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="60dp"
+            android:src="@drawable/now" />
+
+        <ImageView
+            android:id="@+id/end_image"
+            android:layout_width="48dp"
+            android:layout_height="39dp"
+            android:contentDescription="리셋 버튼"
+            android:src="@drawable/end" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
